added card stying

--- a/apps/toolsy/src/app/app.component.html
+++ b/apps/toolsy/src/app/app.component.html
@@ -129,13 +129,27 @@
         </div>
       </div>
     </div>
-    <div class="p-6">
-      <div>
-        Info
-      </div>
-      <div>
-        list
-      </div>
+    <div class="p-6 w-full flex">
+      <tly-tool-card
+        class="w-1/4"
+        [imageUrl]="'/assets/images/tools/blobmaker.png'"
+        description="Makes blob shapes"
+      ></tly-tool-card>
+      <tly-tool-card
+        class="w-1/4 ml-5"
+        [imageUrl]="'/assets/images/tools/blobmaker.png'"
+        description="Makes blob shapes"
+      ></tly-tool-card>
+      <tly-tool-card
+        class="w-1/4 ml-5"
+        [imageUrl]="'/assets/images/tools/blobmaker.png'"
+        description="Makes blob shapes"
+      ></tly-tool-card>
+      <tly-tool-card
+        class="w-1/4 ml-5"
+        imageUrl="/assets/images/tools/blobmaker.png"
+        description="Makes blob shapes"
+      ></tly-tool-card>
     </div>
   </section>
 </div>
