--- a/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
+++ b/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
@@ -1,1 +1,21 @@
-<p>tool-card works!</p>
+<div
+  class="shadow p-6 text-center border-solid border-1 border-gray-600 rounded-lg"
+>
+  <div class="mb-6 flex justify-center">
+    <img [src]="imageUrl" alt="" srcset="" />
+  </div>
+  <div>
+    <h3 class="mb-2 text-base font-bold">Blob Maker</h3>
+    <p class="text-sm text-gray-700">
+      {{ description }}
+    </p>
+  </div>
+  <div class="mt-6">
+    <button
+      (click)="viewClicked()"
+      class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-8 border border-blue-500 hover:border-transparent rounded"
+    >
+      View
+    </button>
+  </div>
+</div>
