--- a/libs/tool-overlay/src/lib/toolsy-overlay/toolsy-overlay.component.html
+++ b/libs/tool-overlay/src/lib/toolsy-overlay/toolsy-overlay.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="width: 100%; height: 100%;">
   <ng-container [ngSwitch]="contentType">
     <ng-container *ngSwitchCase="'string'">
       <div class="box">
