--- a/apps/toolsy/src/app/pages/home/home.component.html
+++ b/apps/toolsy/src/app/pages/home/home.component.html
@@ -1,12 +1,65 @@
-<tly-tool-card
-  *ngFor="let tool of tools$ | async"
-  class="w-1/4"
-  [imageUrl]="tool.media.logo"
-  [description]="tool.description.line"
-  (viewHandle)="open(tpl)"
-  (click)="selected(tool)"
-></tly-tool-card>
-
+<nav class="fixed top-0 p-6 w-full">
+  <div>
+    <toolsy-logo></toolsy-logo>
+  </div>
+</nav>
+<div
+  class="bg-blue-700 flex justify-center items-center"
+  [ngStyle]="{ height: '410px' }"
+  style="
+    background: linear-gradient(182.41deg, #2f80ed -9.87%, #992fed 126.96%);
+  "
+>
+  <div class="w-3/5">
+    <h2
+      class="text-4xl mb-10 tracking-tight text-white leading-10 font-extrabold sm:leading-none text-center"
+    >
+      Discover tools &amp; services
+    </h2>
+    <div class="w-full">
+      <div class="relative w-full font">
+        <input
+          placeholder="Search for a tool or service"
+          #search
+          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-5 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+          (keyup.enter)="goToSearch(search.value)"
+        />
+        <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
+          <svg
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="24"
+            height="24"
+            class="text-gray-600"
+          >
+            <path
+              d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+              class="heroicon-ui"
+            ></path>
+          </svg>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="flex h-full">
+  <div class="flex-col border-r pt-3 pl-3 pr-5 w-1/5 h-auto">
+    <div class="overflow-auto h-full">
+      <toolsy-categories></toolsy-categories>
+    </div>
+  </div>
+  <div class="p-12 w-full flex">
+    <tly-tool-card
+      *ngFor="let tool of tools$ | async"
+      class="w-1/4"
+      [imageUrl]="tool.media.logo"
+      [description]="tool.description.line"
+      (viewHandle)="open(tpl)"
+      (click)="selected(tool)"
+    ></tly-tool-card>
+  </div>
+</section>
 <ng-template #tpl let-close="close">
   <tly-tool-dialog-ui [tool]="tool"></tly-tool-dialog-ui>
 </ng-template>
