--- a/apps/toolsy/src/styles.scss
+++ b/apps/toolsy/src/styles.scss
@@ -3,6 +3,8 @@
 // Angular CDK
 @import '@angular/cdk/overlay-prebuilt.css';
 
+@import 'overlayscrollbars/css/OverlayScrollbars.css';
+
 tly-overlay {
   width: 100%;
   height: 100%;
