--- a/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
+++ b/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
@@ -1,4 +1,4 @@
-<div class="p-8">
+<div class="p-8 h-full">
   <div class="flex">
     <div class="mr-4">
       <img class="h-16 w-16" [src]="tool?.media?.logo" alt="" />
@@ -10,7 +10,7 @@
   </div>
   <div class="flex mt-8">
     <div class="w-4/6 mr-10 shadow rounded-lg bg-white p-6">
-      <div style="height: 380px;">
+      <div style="height: 380px">
         <img
           class="w-full h-full"
           [src]="(tool?.media?.snapshot)[index]"
