--- a/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
+++ b/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
@@ -5,7 +5,7 @@
     <img [src]="imageUrl" alt="" srcset="" />
   </div>
   <div>
-    <h3 class="mb-2 text-base font-bold">Blob Maker</h3>
+    <h3 class="mb-2 text-base font-bold">{{ title }}</h3>
     <p class="text-sm text-gray-700">
       {{ description }}
     </p>
