--- a/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
+++ b/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
@@ -1,4 +1,4 @@
-<div class="p-8 h-full">
+<div class="p-8">
   <div class="flex">
     <div class="mr-4">
       <img class="h-16 w-16" [src]="tool?.media?.logo" alt="" />
