--- a/apps/toolsy/src/app/pages/home/home.component.html
+++ b/apps/toolsy/src/app/pages/home/home.component.html
@@ -1,95 +1,71 @@
-<div waIntersectionObserver>
-  <nav
-    class="fixed top-0 p-6 w-full z-50"
-    [ngClass]="{ nav: scrolledUp, 'bg-blue-700': scrolledUp }"
-  >
-    <div>
-      <toolsy-logo></toolsy-logo>
-    </div>
-  </nav>
-  <div
-    [ngClass]="{ nav: !scrolledUp, 'bg-blue-700': !scrolledUp }"
-    class="flex justify-center items-center"
-    [ngStyle]="{ height: '410px' }"
-  >
-    <div class="w-3/5">
-      <h2
-        class="text-4xl mb-10 tracking-tight text-white leading-10 font-extrabold sm:leading-none text-center"
+<nav
+  class="fixed top-0 h-16 p-6 w-full bg-blue-700 flex items-center"
+  style="
+    background: linear-gradient(182.41deg, #2f80ed -9.87%, #992fed 126.96%);
+  "
+>
+  <div class="mr-10">
+    <toolsy-logo></toolsy-logo>
+  </div>
+  <div class="relative w-1/2 font">
+    <input
+      #search
+      placeholder="Search for a tool or service"
+      class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+      (keyup.enter)="goToSearch(search.value)"
+    />
+    <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
+      <svg
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        width="24"
+        height="24"
+        class="text-gray-600"
       >
-        Discover tools &amp; services
-      </h2>
-      <div class="w-full">
-        <div class="relative w-full font">
-          <input
-            (waIntersectionObservee)="onIntersection($event)"
-            placeholder="Search for a tool or service"
-            #search
-            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-5 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-            (keyup.enter)="goToSearch(search.value)"
-          />
-          <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
-            <svg
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              width="24"
-              height="24"
-              class="text-gray-600"
-            >
-              <path
-                d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
-                class="heroicon-ui"
-              ></path>
-            </svg>
-          </div>
-        </div>
-      </div>
+        <path
+          d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+          class="heroicon-ui"
+        ></path>
+      </svg>
     </div>
   </div>
+</nav>
 
-  <div class="flex h-full">
-    <div
-      class="flex-col overflow-y-auto h-screen border-r pt-3 pl-3 pr-5 w-64"
-      [ngClass]="{
-        'h-full': scrolledUp,
-        fixed: scrolledUp,
-        'top-16': scrolledUp
-      }"
-    >
-      <div class="overflow-y-auto h-full">
-        <toolsy-categories></toolsy-categories>
-      </div>
+<div class="flex h-full mt-16">
+  <div
+    class="flex-col fixed overflow-y-auto h-screen border-r pt-3 pl-3 pr-5 w-64"
+  >
+    <div class="h-full overflow-y-auto pb-6">
+      <toolsy-categories></toolsy-categories>
     </div>
-    <div
-      class="p-12 w-full flex flex-wrap flex-row"
-      [ngClass]="{ 'ml-64': scrolledUp }"
-    >
-      <ng-container *ngIf="tools$ | async as tool; else loadingTools">
-        <tly-tool-card
-          *ngFor="let tool of tools$ | async"
-          class="w-1/4"
-          [imageUrl]="tool?.media?.logo"
-          [title]="tool?.name"
-          [description]="tool?.description?.line"
-          (viewHandle)="open(tpl)"
-          (click)="selected(tool)"
-        ></tly-tool-card>
-      </ng-container>
-      <ng-template #loadingTools>
-        <content-loader
-          class="w-1/4"
-          viewBox="0 0 260 282"
-          speed="2"
-          backgroundColor="#f3f3f3"
-          foregroundColor="#ecebeb"
-        >
-          <svg:rect x="82" y="161" rx="2" ry="2" width="110" height="9" />
-          <svg:rect x="77" y="231" rx="2" ry="2" width="119" height="21" />
-          <svg:circle cx="135" cy="74" r="60" />
-          <svg:rect x="27" y="182" rx="2" ry="2" width="221" height="9" />
-        </content-loader>
-      </ng-template>
-    </div>
+  </div>
+  <div class="tools-grid">
+    <ng-container *ngIf="tools$ | async as tool; else loadingTools">
+      <tly-tool-card
+        *ngFor="let tool of tools$ | async"
+        [imageUrl]="tool?.media?.logo"
+        [title]="tool?.name"
+        [description]="tool?.description?.line"
+        (viewHandle)="open(tpl)"
+        (click)="selected(tool)"
+      ></tly-tool-card>
+    </ng-container>
+    <ng-template #loadingTools>
+      <content-loader
+        *ngFor="let i of toolsLoading"
+        class="tool-card"
+        viewBox="0 0 260 282"
+        speed="2"
+        backgroundColor="#f3f3f3"
+        foregroundColor="#ecebeb"
+      >
+        <svg:rect x="82" y="161" rx="2" ry="2" width="110" height="9" />
+        <svg:rect x="77" y="231" rx="2" ry="2" width="119" height="21" />
+        <svg:circle cx="135" cy="74" r="60" />
+        <svg:rect x="27" y="182" rx="2" ry="2" width="221" height="9" />
+      </content-loader>
+    </ng-template>
   </div>
 </div>
 
