--- a/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
+++ b/libs/tool-ui/src/lib/components/tool-card/tool-card.component.html
@@ -1,7 +1,5 @@
-<div
-  class="shadow p-6 text-center border-solid border-1 border-gray-600 rounded-lg"
->
-  <div class="mb-6 flex justify-center">
+<div class="tool-card">
+  <div class="mb-6 h-16 max-h-16 flex justify-center">
     <img [src]="imageUrl" alt="" srcset="" />
   </div>
   <div>
