--- a/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
+++ b/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
@@ -1,7 +1,7 @@
 <div class="p-8">
   <div class="flex">
-    <div class="mr-4">
-      <img class="h-16 w-16" [src]="tool?.media?.logo" alt="" />
+    <div class="mr-4 h-16 max-h-16">
+      <img [src]="tool?.media?.logo" alt="" />
     </div>
     <div class="flex flex-col justify-center">
       <h3 class="mb-0 font-bold">{{ tool?.name }}</h3>
