added github link

--- a/apps/toolsy/src/app/components/categories/categories.component.html
+++ b/apps/toolsy/src/app/components/categories/categories.component.html
@@ -12,7 +12,7 @@
       <div class="w-full">
         <div class="relative">
           <select
-            class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+            class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 pr-8 pl-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
             id="grid-state"
             formControlName="category"
             (change)="categorySelected(category)"
