--- a/apps/toolsy/src/app/components/tool-dialog/tool-dialog.component.html
+++ b/apps/toolsy/src/app/components/tool-dialog/tool-dialog.component.html
@@ -6,8 +6,7 @@
     (click)="onClose()"
   ></div>
   <div
-    class="bg-dialog absolute shadow-md rounded-md animated slideInRight my-16 faster z-30"
-    style="max-width: 90vw; min-width: 90vw; width: 90vw"
+    class="bg-dialog absolute shadow-md rounded-md animated slideInRight my-16 faster z-30 w-8/12"
   >
     <ng-content></ng-content>
   </div>
