--- a/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
+++ b/libs/tool-ui/src/lib/components/tool-dialog-ui/tool-dialog-ui.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="flex my-5">
         <img
-          class="w-16 h-16 mr-4 shadow rounded cursor-pointer"
+          class="w-16 h-16 mr-4 shadow-md rounded cursor-pointer hover:shadow-lg"
           *ngFor="let snap of tool?.media?.snapshot"
           [src]="snap"
           alt=""
