--- a/apps/toolsy/src/app/pages/search-results/search-results.component.html
+++ b/apps/toolsy/src/app/pages/search-results/search-results.component.html
@@ -4,31 +4,42 @@
     background: linear-gradient(182.41deg, #2f80ed -9.87%, #992fed 126.96%);
   "
 >
-  <div class="mr-10">
+  <div class="mr-10 flex-1">
     <toolsy-logo></toolsy-logo>
   </div>
-  <div class="relative w-1/2 font">
-    <input
-      [(ngModel)]="search"
-      placeholder="Search for a tool or service"
-      class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-      (keyup.enter)="handleSearch(search)"
-    />
-    <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
-      <svg
-        fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-        width="24"
-        height="24"
-        class="text-gray-600"
-      >
-        <path
-          d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
-          class="heroicon-ui"
-        ></path>
-      </svg>
+  <div class="flex flex-auto justify-center">
+    <div class="relative w-full font">
+      <input
+        [(ngModel)]="search"
+        placeholder="Search for a tool or service"
+        class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+        (keyup.enter)="handleSearch(search)"
+      />
+      <div class="absolute right-0 bottom-0 top-0 flex items-center mr-3">
+        <svg
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24"
+          height="24"
+          class="text-gray-600"
+        >
+          <path
+            d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"
+            class="heroicon-ui"
+          ></path>
+        </svg>
+      </div>
     </div>
+  </div>
+  <div class="ml-10 flex-1 flex justify-end">
+    <a
+      href="https://github.com/ikamva/toolsy"
+      target="__blank"
+      class="transform hover:rotate-6 transition cursor-pointer"
+    >
+      <img class="h-8 w-8" src="assets/images/github.png" alt="" />
+    </a>
   </div>
 </nav>
 <section class="flex h-full mt-16">
